--- a/app/configuration/styles/snmp.scss
+++ b/app/configuration/styles/snmp.scss
@@ -9,6 +9,6 @@
     padding-right: 1.5rem;
   }
   .btn-add-manager {
-    padding: 0;
+    padding-left: 0;
   }
 }
